// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EmptyState > renders with all props 1`] = `
<div
  class="flex flex-col items-center text-center py-16 px-4"
  data-testid="empty-state"
>
  <h3
    class="font-display text-base uppercase tracking-widest text-text mt-4"
  >
    No leads yet
  </h3>
  <p
    class="font-body text-sm text-text-muted mt-2 max-w-xs"
  >
    Leads will appear once campaigns are live.
  </p>
  <div
    class="mt-6"
  >
    <button>
      View Campaigns
    </button>
  </div>
</div>
`;

exports[`EmptyState > renders with required title only 1`] = `
<div
  class="flex flex-col items-center text-center py-16 px-4"
>
  <h3
    class="font-display text-base uppercase tracking-widest text-text mt-4"
  >
    No leads yet
  </h3>
</div>
`;
